--- a/과제1.ipynb
+++ b/과제1.ipynb
@@ -1197,6 +1197,104 @@
     "            \n",
     "# 공돌이는 두괄식"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "db 연동 오류 :  invalid literal for int() with base 10: ''\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' CRUD : Create, Read, Update, Delete '''\n",
+    "\n",
+    "import pymysql\n",
+    "\n",
+    "config = {\n",
+    "    'host' : '127.0.0.1',\n",
+    "    'user' : 'root',\n",
+    "    'password' : 'root1234',\n",
+    "    'database' : 'work',\n",
+    "    'port' : 3306,\n",
+    "    'charset' : 'utf8',\n",
+    "    'use_unicode' : True}\n",
+    "try :\n",
+    "    conn = pymysql.connect(**config)\n",
+    "    cursor = conn.cursor()\n",
+    "    \n",
+    "    # (1) table 생성\n",
+    "    sql = '''create table goods(\n",
+    "                    code int primary key,\n",
+    "                    name varchar(30) not null,\n",
+    "                    su int default 0,\n",
+    "                    dan int default 0\n",
+    "                    )'''\n",
+    "                    \n",
+    "    # (2) 레코드 추가\n",
+    "    code = int(input('코드 입력 : '))\n",
+    "    name = input('상품명 입력 : ')\n",
+    "    su = int(input('수량 입력 : '))\n",
+    "    dan = int(input('단가 입력 : '))\n",
+    "    \n",
+    "    sql = f'insert into goods values({code}, \"{name}\",{su}, {dan})'\n",
+    "    cursor.execute(sql)\n",
+    "    conn.commit()\n",
+    "    \n",
+    "    # (3) 전체 목록 보기\n",
+    "    sql = 'select * from goods'\n",
+    "    cursor.execute(sql) # sql문 실행\n",
+    "    rows = cursor.fetchall() # 전체검색\n",
+    "    \n",
+    "    # 레코드 출력 : 양식문자\n",
+    "    for r in rows : # fetchone()\n",
+    "        #print(r) #tuple type 출력\n",
+    "        print('%d %s %d %d' %r)\n",
+    "        \n",
+    "        print('검색 레코드 수 : ', len(rows))\n",
+    "        \n",
+    "    #    (4) 상품명 조회\n",
+    "    in_name = input('\\n조회할 상품명 입력 : ')\n",
+    "    sql = f'select * from goods where name like \"%{in_name}%\" '\n",
+    "    cursor.execute(sql) # sql문 실행\n",
+    "    rows = cursor.fetchall()\n",
+    "    \n",
+    "    if rows :\n",
+    "        # 레코드 1개 출력 : index 이용\n",
+    "        for r in rows :\n",
+    "            print(r[0], r[1], r[2], r[3])\n",
+    "    else :\n",
+    "        print('해당 상품 없음')\n",
+    "        \n",
+    "except Exception as e :\n",
+    "    print('db 연동 오류 : ', e)\n",
+    "    # (5) 이전 상태 리턴\n",
+    "    conn.rollback()\n",
+    "finally:\n",
+    "    cursor.close()\n",
+    "    conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PC 부품 생산업체의 업무\n",
+    "\n",
+    "## AI를 이용한 컴퓨터용품 분류 시스템\n",
+    "\n",
+    "### 기능 1. 컴퓨터제품과 일반 제품의 사진을 구분하는 기능\n",
+    "\n",
+    "### 기능 2. 컴퓨터 제품으로 지정된 사진에 메타정보를 관리(입력,수정)하는 기능\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
