--- a/과제1.ipynb
+++ b/과제1.ipynb
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1060,17 +1060,6 @@
       "회원등록을 성공했습니다.\n",
       "\n"
      ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
     }
    ],
    "source": [
@@ -1081,7 +1070,7 @@
     "config = {                  # MySQL데이터베이스를 사용하기 위해 환경변수를 딕셔너리로 생성함. \n",
     "    'host' : '127.0.0.1',   # MySql 이 동작하는 ipv4주소 \n",
     "    'user' : 'root',        # MySql 설치할 때 정한 계정 \n",
-    "    'passwd' : 'root1234',  # MySql 설치할 때 정한 비밀번호\n",
+    "    'password' : 'root1234',  # MySql 설치할 때 정한 비밀번호\n",
     "    'database' : 'test_db', # 생성한 데이터베이스\n",
     "    'port' : 3306,          # MySql이 응용프로그램과 통신할 때 사용하는 포트번호 리터럴이 아닌 정수값으로 써야함\n",
     "    'charset' : 'utf8',     # 한글을 사용하겠다는 설정 \n",
@@ -1200,14 +1189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "db 연동 오류 :  invalid literal for int() with base 10: ''\n"
+      "db 연동 오류 :  (1062, \"Duplicate entry '2' for key 'goods.PRIMARY'\")\n"
      ]
     }
    ],
@@ -1282,18 +1271,160 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---상품관리---\n",
+      "상품 등록 : 1 \n",
+      "상품목록조회 : 2\n",
+      "상품개별조회 : 3\n",
+      "상품 수정 : 4\n",
+      "상품 삭제 : 5\n",
+      "===goods 테이블 조회1===\n",
+      "(name)\n",
+      "(1, '냉장고', 2, 850000)\n",
+      "(2, '세탁기', 3, 550000)\n",
+      "(3, '전자레인지', 2, 350000)\n",
+      "(4, 'HDTV', 3, 1500000)\n",
+      "(5, '리튬', 5, 1000)\n",
+      "(6, '쿠에타핀', 100, 1500000)\n",
+      "(7, '명인탄산리튬정', 100, 2500000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import pymysql \n",
+    "config = {\n",
+    "    'host' : '127.0.0.1',\n",
+    "    'user' : 'root',\n",
+    "    'password' : 'root1234',\n",
+    "    'database' : 'work',\n",
+    "    'port' : 3306,\n",
+    "    'charset' : 'utf8',\n",
+    "    'use_unicode' : True\n",
+    "}\n",
+    "\n",
+    "def mem_create() :\n",
+    "    try:\n",
+    "        conn = pymysql.connect(**config)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        in_name = input('상품명을 입력하세요 : ')\n",
+    "        if in_name :\n",
+    "            sql = f'select * from goods where NAME = \"{in_name}\"'\n",
+    "            cursor.execute(sql)\n",
+    "            \n",
+    "            rows = cursor.fetchall()\n",
+    "            if len(rows) > 0 :\n",
+    "                print('이미 존재하고 있습니다. 다른 코드를 입력하세요')\n",
+    "            else :\n",
+    "                sql = f'insert into good values(\"{in_name}\")'\n",
+    "                cursor.execute(sql)\n",
+    "                rows = cursor.fetchall()\n",
+    "                conn.commit()\n",
+    "                print('상품명 등록에 성공했습니다.')\n",
+    "                print()\n",
+    "        else :\n",
+    "            print('상품명 등록을 위해 상품명을 입력해 주세요')\n",
+    "    except Exception as e :\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback() \n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        \n",
+    "def mem_read1():\n",
+    "    try :\n",
+    "        conn = pymysql.connect(**config)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        cursor.execute('select * from goods')\n",
+    "        rows = cursor.fetchall()\n",
+    "        print('===goods 테이블 조회1===')\n",
+    "        print('(name)')\n",
+    "        for row in rows:\n",
+    "            print(row)\n",
+    "            \n",
+    "    except Exception as e :\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback()\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        \n",
+    "def mem_read2() :\n",
+    "    try :\n",
+    "        conn = pymysql.connect(**config)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        in_code = input('조회할 상품명을 입력하세요 : ')\n",
+    "        sql = f'select * from goods where NAME = \"{in_code}\"'\n",
+    "        cursor.execute(sql)\n",
+    "        rows = cursor.fetchall()\n",
+    "        \n",
+    "        if len(rows) > 0 : # 발견이 된 경우. 1~6까지 숫자넣었을 때.\n",
+    "            print('===goods 테이블 조회2===')\n",
+    "            for row in rows :\n",
+    "                print('조회 결과는 상품명 : {} 입니다.'.format(row[0]))\n",
+    "        else :\n",
+    "            print('조회 결과 입력한 상품명에 맞는 상품이 없습니다.')\n",
+    "    except Exception as e:\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback()\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        \n",
+    "if __name__ == '__main__' :\n",
+    "    while True:\n",
+    "        os.system('cls')\n",
+    "        print('---상품관리---')\n",
+    "        print('상품 등록 : 1 ')\n",
+    "        print('상품목록조회 : 2')\n",
+    "        print('상품개별조회 : 3')\n",
+    "        print('상품 수정 : 4')\n",
+    "        print('상품 삭제 : 5')\n",
+    "        \n",
+    "        sel = int(input('작업을 선택하세요 : '))\n",
+    "        if sel == 1 :\n",
+    "            mem_create()\n",
+    "            os.system('pause')\n",
+    "        elif sel == 2 :\n",
+    "            mem_read1()\n",
+    "            os.system('pause')\n",
+    "        elif sel ==3 :\n",
+    "            mem_read2()\n",
+    "            os.system('pause')\n",
+    "        elif sel == 4 :\n",
+    "            print('상품 수정기능은 준비중입니다. ')\n",
+    "            os.system('pause')\n",
+    "        elif sel == 5 :\n",
+    "            print('상품 삭제기능은 준비중입니다. ')\n",
+    "            os.system('pause')\n",
+    "        else :\n",
+    "            print('잘못 선택했습니다. ')\n",
+    "            os.system('pause')\n",
+    "    \n",
+    "            \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PC 부품 생산업체의 업무\n",
+    "## \t현장 안전모 미착용 알림 시스템 개발을 위한 안전모 객체 이미지 학습용 데이터\n",
     "\n",
-    "## AI를 이용한 컴퓨터용품 분류 시스템\n",
-    "\n",
-    "### 기능 1. 컴퓨터제품과 일반 제품의 사진을 구분하는 기능\n",
-    "\n",
-    "### 기능 2. 컴퓨터 제품으로 지정된 사진에 메타정보를 관리(입력,수정)하는 기능\n",
-    "\n"
+    "### 기능 1. 공사현장에서 인력을 사용하지 않고 자동으로 안전모 착용 여부를 점검하여 주의를 환기하거나,\n",
+    "### 안전모 미착용자가 위험구역에 진입하는 것을 제한하는 시스템에 활용할 수 있는 알고리즘 개발과정에 학습 데이터로서 사용할 수 있음\n"
    ]
   }
  ],
