--- a/연습2.ipynb
+++ b/연습2.ipynb
@@ -345,39 +345,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' CRUD : Create, Read, Update, Delete '''\n",
+    "\n",
+    "import pymysql\n",
+    "\n",
+    "config = {\n",
+    "    'host' : '127.0.0.1',\n",
+    "    'user' : 'root',\n",
+    "    'password' : 'root1234',\n",
+    "    'database' : 'work',\n",
+    "    'port' : 3306,\n",
+    "    'charset' : 'utf8',\n",
+    "    'use_unicode' : True}\n",
+    "try :\n",
+    "    conn = pymysql.connect(**config)\n",
+    "    cursor = conn.cursor()\n",
+    "    \n",
+    "    # (1) table 생성\n",
+    "    sql = '''create table goods(\n",
+    "                    code int primary key,\n",
+    "                    name varchar(30) not null,\n",
+    "                    su int default 0,\n",
+    "                    dan int default 0\n",
+    "                    )'''\n",
+    "                    \n",
+    "    # (2) 레코드 추가\n",
+    "    code = int(input('코드 입력 : '))\n",
+    "    name = input('상품명 입력 : ')\n",
+    "    su = int(input('수량 입력 : '))\n",
+    "    dan = int(input('단가 입력 : '))\n",
+    "    \n",
+    "    sql = f'insert into goods values({code}, \"{name}\", {su}, {dan})'\n",
+    "    cursor.execute(sql)\n",
+    "    conn.commit()\n",
+    "    \n",
+    "    # (3) 전체 목록 보기\n",
+    "    sql = 'select * from goods'\n",
+    "    cursor.execute(sql) #sql문 실행\n",
+    "    rows = cursor.fetchall() # 전체검색\n",
+    "    \n",
+    "    # 레코드 출력 : 양식문자\n",
+    "    for r in rows : #fetchone()\n",
+    "        #print(r) #tuple type 출력\n",
+    "        print('%d %s %d %d' %r)\n",
+    "        \n",
+    "        print('검색 레코드 수 : ', len(rows))\n",
+    "        \n",
+    "    # (4) 상품명 조회\n",
+    "    in_name = input('\\n조회할 상품명 입력 : ')\n",
+    "    sql = f'select * from goods where name like \"%d{in_name}%\" '\n",
+    "    cursor.execute(sql) # sql문 실행\n",
+    "    rows = cursor.fetchall()\n",
+    "    \n",
+    "    if rows :\n",
+    "        # 레코드 1개 출력 : index 이용\n",
+    "        for r in rows:\n",
+    "            print(r[0], r[1], r[2], r[3])\n",
+    "    else :\n",
+    "        print('해당 상품 없음')\n",
+    "        \n",
+    "except Exception as e :\n",
+    "    print('db 연동 오류 : ', e)\n",
+    "    # (5) 이전 상태 리턴\n",
+    "    conn.rollback()\n",
+    "finally:\n",
+    "    cursor.close()\n",
+    "    conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "db 연동 실패 :  unable to open database file\n"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "Already closed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m :\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;66;03m# (1) db 연동 객체\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m     conn \u001b[38;5;241m=\u001b[39m sqlite3\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/sqlite_db\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m# db 생성 -> 연결 object\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m# sql 실행 객체\u001b[39;00m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: unable to open database file",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mInterfaceError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 69\u001b[0m\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdb 연동 실패 : \u001b[39m\u001b[38;5;124m'\u001b[39m, e)\n\u001b[1;32m---> 69\u001b[0m     conn\u001b[38;5;241m.\u001b[39mrollback() \u001b[38;5;66;03m# 실행 취소\u001b[39;00m\n\u001b[0;32m     70\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     71\u001b[0m     \u001b[38;5;66;03m# object.close()\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\human\\anaconda3\\Lib\\site-packages\\pymysql\\connections.py:487\u001b[0m, in \u001b[0;36mConnection.rollback\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    481\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    482\u001b[0m \u001b[38;5;124;03mRoll back the current transaction.\u001b[39;00m\n\u001b[0;32m    483\u001b[0m \n\u001b[0;32m    484\u001b[0m \u001b[38;5;124;03mSee `Connection.rollback() <https://www.python.org/dev/peps/pep-0249/#rollback>`_\u001b[39;00m\n\u001b[0;32m    485\u001b[0m \u001b[38;5;124;03min the specification.\u001b[39;00m\n\u001b[0;32m    486\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m--> 487\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_execute_command(COMMAND\u001b[38;5;241m.\u001b[39mCOM_QUERY, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mROLLBACK\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    488\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_read_ok_packet()\n",
-      "File \u001b[1;32mc:\\Users\\human\\anaconda3\\Lib\\site-packages\\pymysql\\connections.py:840\u001b[0m, in \u001b[0;36mConnection._execute_command\u001b[1;34m(self, command, sql)\u001b[0m\n\u001b[0;32m    839\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sock:\n\u001b[1;32m--> 840\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m err\u001b[38;5;241m.\u001b[39mInterfaceError(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    842\u001b[0m \u001b[38;5;66;03m# If the last query was unbuffered, make sure it finishes before\u001b[39;00m\n\u001b[0;32m    843\u001b[0m \u001b[38;5;66;03m# sending new commands\u001b[39;00m\n",
-      "\u001b[1;31mInterfaceError\u001b[0m: (0, '')",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mError\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 73\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     71\u001b[0m     \u001b[38;5;66;03m# object.close()\u001b[39;00m\n\u001b[0;32m     72\u001b[0m     cursor\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m---> 73\u001b[0m     conn\u001b[38;5;241m.\u001b[39mclose()\n",
-      "File \u001b[1;32mc:\\Users\\human\\anaconda3\\Lib\\site-packages\\pymysql\\connections.py:409\u001b[0m, in \u001b[0;36mConnection.close\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    400\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    401\u001b[0m \u001b[38;5;124;03mSend the quit message and close the socket.\u001b[39;00m\n\u001b[0;32m    402\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    406\u001b[0m \u001b[38;5;124;03m:raise Error: If the connection is already closed.\u001b[39;00m\n\u001b[0;32m    407\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    408\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_closed:\n\u001b[1;32m--> 409\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m err\u001b[38;5;241m.\u001b[39mError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAlready closed\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    410\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_closed \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    411\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sock \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[1;31mError\u001b[0m: Already closed"
+      "---상품관리---\n",
+      "상품 등록 : 1 \n",
+      "상품목록조회 : 2\n",
+      "상품개별조회 : 3\n",
+      "상품 수정 : 4\n",
+      "상품 삭제 : 5\n"
      ]
     }
    ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import pymysql \n",
+    "config = {\n",
+    "    'host' : '127.0.0.1',\n",
+    "    'user' : 'root',\n",
+    "    'password' : 'root1234',\n",
+    "    'database' : 'work',\n",
+    "    'port' : 3306,\n",
+    "    'charset' : 'utf8',\n",
+    "    'use_unicode' : True\n",
+    "}\n",
+    "\n",
+    "def mem_create() :\n",
+    "    try:\n",
+    "        conn = pymysql.connect(**config)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        in_name = input('상품명을 입력하세요 : ')\n",
+    "        if in_name :\n",
+    "            sql = f'select * from goods where NAME = \"{in_name}\"'\n",
+    "            cursor.execute(sql)\n",
+    "            \n",
+    "            rows = cursor.fetchall()\n",
+    "            if len(rows) > 0 :\n",
+    "                print('이미 존재하고 있습니다. 다른 코드를 입력하세요')\n",
+    "            else :\n",
+    "                sql = f'insert into good values(\"{in_name}\")'\n",
+    "                cursor.execute(sql)\n",
+    "                rows = cursor.fetchall()\n",
+    "                conn.commit()\n",
+    "                print('상품명 등록에 성공했습니다.')\n",
+    "                print()\n",
+    "        else :\n",
+    "            print('상품명 등록을 위해 상품명을 입력해 주세요')\n",
+    "    except Exception as e :\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback() \n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        \n",
+    "def mem_read1():\n",
+    "    try :\n",
+    "        conn = pymysql.connect(**config)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        cursor.execute('select * from goods')\n",
+    "        rows = cursor.fetchall()\n",
+    "        print('===goods 테이블 조회1===')\n",
+    "        print('(name)')\n",
+    "        for row in rows:\n",
+    "            print(row)\n",
+    "            \n",
+    "    except Exception as e :\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback()\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        \n",
+    "def mem_read2() :\n",
+    "    try :\n",
+    "        conn = pymysql.connect(**config)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        in_code = input('조회할 상품명을 입력하세요 : ')\n",
+    "        sql = f'select * from goods where NAME = \"{in_code}\"'\n",
+    "        cursor.execute(sql)\n",
+    "        rows = cursor.fetchall()\n",
+    "        \n",
+    "        if len(rows) > 0 :\n",
+    "            print('===goods 테이블 조회2===')\n",
+    "            for row in rows :\n",
+    "                print('조회 결과는 상품명 : {} 입니다.'.format(row[0]))\n",
+    "        else :\n",
+    "            print('조회 결과 입력한 상품명에 맞는 상품이 없습니다.')\n",
+    "    except Exception as e:\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback()\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        \n",
+    "if __name__ == '__main__' :\n",
+    "    while True:\n",
+    "        os.system('cls')\n",
+    "        print('---상품관리---')\n",
+    "        print('상품 등록 : 1 ')\n",
+    "        print('상품목록조회 : 2')\n",
+    "        print('상품개별조회 : 3')\n",
+    "        print('상품 수정 : 4')\n",
+    "        print('상품 삭제 : 5')\n",
+    "        \n",
+    "        sel = int(input('작업을 선택하세요 : '))\n",
+    "        if sel == 1 :\n",
+    "            mem_create()\n",
+    "            os.system('pause')\n",
+    "        elif sel == 2 :\n",
+    "            mem_read1()\n",
+    "            os.system('pause')\n",
+    "        elif sel ==3 :\n",
+    "            mem_read2()\n",
+    "            os.system('pause')\n",
+    "        elif sel == 4 :\n",
+    "            print('상품 수정기능은 준비중입니다. ')\n",
+    "            os.system('pause')\n",
+    "        elif sel == 5 :\n",
+    "            print('상품 삭제기능은 준비중입니다. ')\n",
+    "            os.system('pause')\n",
+    "        else :\n",
+    "            print('잘못 선택했습니다. ')\n",
+    "            os.system('pause')\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---상품관리---\n",
+      "상품 등록 : 1 \n",
+      "상품목록조회 : 2\n",
+      "상품개별조회 : 3\n",
+      "상품 수정 : 4\n",
+      "상품 삭제 : 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===goods 테이블 조회1===\n",
+      "(name)\n",
+      "(1, '냉장고', 2, 850000)\n",
+      "(2, '세탁기', 3, 550000)\n",
+      "(3, '전자레인지', 2, 350000)\n",
+      "(4, 'HDTV', 3, 1500000)\n",
+      "(5, '리튬', 5, 1000)\n",
+      "(6, '쿠에타핀', 100, 1500000)\n",
+      "(7, '명인탄산리튬정', 100, 2500000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import pymysql\n",
+    "config = {\n",
+    "    'host' : '127.0.0.1',\n",
+    "    'user' : 'root',\n",
+    "    'password' : 'root1234',\n",
+    "    'database' : 'work',\n",
+    "    'port' : 3306,\n",
+    "    'charset' : 'utf8',\n",
+    "    'use_unicode' : True\n",
+    "}\n",
+    "\n",
+    "def mem_create():\n",
+    "    try:\n",
+    "        conn = pymysql.connect(**config)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        in_name = input('상품명을 입력하세요 : ')\n",
+    "        if in_name :\n",
+    "            sql = f'select * from goods where NAME = \"{in_name}\" '\n",
+    "            cursor.execute(sql)\n",
+    "            \n",
+    "            rows = cursor.fetchall()\n",
+    "            if len(rows) > 0 :\n",
+    "                print('이미 존재하고 있습니다. 다른 상품명을 입력하세요')\n",
+    "            else :\n",
+    "                sql = f'insert into good values(\"{in_name}\")'\n",
+    "                cursor.execute(sql)\n",
+    "                rows = cursor.fetchall()\n",
+    "                conn.commit()\n",
+    "                print('상품명 등록에 성공했습니다.')\n",
+    "                print()\n",
+    "        else :\n",
+    "            print('상품명 등록을 위해 상품명을 입력해 주세요')\n",
+    "    except Exception as e :\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback()\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        \n",
+    "def mem_read1():\n",
+    "    try:\n",
+    "        conn = pymysql.connect(**config)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        cursor.execute('select * from goods')\n",
+    "        rows = cursor.fetchall()\n",
+    "        print('===goods 테이블 조회1===')\n",
+    "        print('(name)')\n",
+    "        for row in rows:\n",
+    "            print(row)\n",
+    "            \n",
+    "    except Exception as e :\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback()\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        \n",
+    "def mem_read2():\n",
+    "    try:\n",
+    "        conn = pymysql.connect(**config)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        in_code = input('조회할 상품명을 입력하세요 : ')\n",
+    "        sql = f'select * from goods where NAME = \"{in_code}\" '\n",
+    "        cursor.execute(sql)\n",
+    "        rows = cursor.fetchall()\n",
+    "        \n",
+    "        if len(rows) > 0 :\n",
+    "            print('===goods 테이블 조회2===')\n",
+    "            for row in rows :\n",
+    "                print('조회 결과는 상품명 : {} 입니다.'.format(row[0]))\n",
+    "        else :\n",
+    "            print('조회 결과 입력한 상품명에 맞는 상품이 없습니다.')\n",
+    "    except Exception as e:\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback()\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        \n",
+    "if __name__ == '__main__' :\n",
+    "    while True:\n",
+    "        os.system('cls')\n",
+    "        print('---상품관리---')\n",
+    "        print('상품 등록 : 1 ')\n",
+    "        print('상품목록조회 : 2')\n",
+    "        print('상품개별조회 : 3')\n",
+    "        print('상품 수정 : 4')\n",
+    "        print('상품 삭제 : 5')\n",
+    "        \n",
+    "        sel = int(input('작업을 선택하세요 : '))\n",
+    "        if sel == 1:\n",
+    "            mem_create()\n",
+    "            os.system('pause')\n",
+    "        elif sel == 2:\n",
+    "            mem_read1()\n",
+    "            os.system('pause')\n",
+    "        elif sel == 3:\n",
+    "            mem_read2()\n",
+    "            os.system('pause')\n",
+    "        elif sel == 4:\n",
+    "            print('상품 수정기능은 준비중입니다. ')\n",
+    "            os.system('pause')\n",
+    "        elif sel == 5:\n",
+    "            print('상품 삭제기능은 준비중입니다. ')\n",
+    "            os.system('pause')\n",
+    "        else :\n",
+    "            print('잘못 선택했습니다. ')\n",
+    "            os.system('pause')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
